--- a/client/src/assets/lists.css
+++ b/client/src/assets/lists.css
@@ -1,10 +1,11 @@
 /* LIST BODY STYLING */
 
-#bodyContainer.grid {
+#listsWrapper {
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat( auto-fill, minmax(250px, 1fr) );
     grid-auto-rows: min-content;
+    padding-bottom: 20px;
 }
     
 .listBox {
@@ -32,7 +33,7 @@
 .listCheckbox { margin-right: 10px; line-height: 12px; }
 
 .checklistItem, .listItem {
-    font-size: 12px;
+    font-size: 13px;
 }
 
 
