--- a/client/src/assets/trackers.css
+++ b/client/src/assets/trackers.css
@@ -19,7 +19,7 @@
     width: 150px; height: 30px;
     line-height: 30px;
     padding-left: 10px;
-    font-size: 10px;
+    font-size: 12px;
 }
 
 .habitDayContainer {
@@ -44,7 +44,7 @@
     height: 26px;
     margin-bottom: 6px;
     text-transform: uppercase;
-    font-size: 9px;
+    font-size: 11px;
     line-height: 30px;
 }
 
@@ -59,8 +59,8 @@
     box-sizing: border-box;
     border-left: 1px solid #e7e7e7;
     padding: 2px 0px 4px;
-    line-height: 10px;
-    font-size: 9px;
+    line-height: 12px;
+    font-size: 11px;
     overflow: hidden;
     text-align: center;
     height: 100%;
@@ -73,7 +73,7 @@
 }
 
 input.lineTitle {
-    font-size: 9px;
+    font-size: 11px;
     width: 150px; height: 11px;
     letter-spacing: 1px;
     font-family: 'Sen';
@@ -81,7 +81,8 @@ input.lineTitle {
 
 input.addHabitLineButton {
     margin: 7px 3px 7px 10px;
-    font-size: 8px;
+    font-size: 10px;
+    letter-spacing: 1px;
     text-transform: uppercase;
     font-weight: bold;
     border: 1px solid rgb(233, 187, 187);
